--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require": {
 		    "guzzlehttp/guzzle": "^6.2.1"
     },
-    "branch-alias": {
-        "dev-master": "1.x-dev"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
     }
 }
