--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nreach/base",
+    "name": "nreach/nreach-base",
     "description": "nreach base php library",
     "keywords": ["php"],
     "license": "GPL-2.0",
